Fixed Overflow resize

--- a/style.css
+++ b/style.css
@@ -331,6 +331,7 @@ body {
     -webkit-box-shadow: 0px 8px 19px 1px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 8px 19px 1px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 8px 19px 1px rgba(0, 0, 0, 0.75);
+    overflow: unset;
 }
 
 .window_panel .window_header {
